# Automated-Doorlock

./: .gitignore  Cargo.toml  build.rs  deploy  dev.db  log.txt  migrate.sh  my_contract.json
.cargo/: config
src/: auth.rs  controllers.rs  dev.db  error.rs  helpers.rs  log.txt  main.rs  utils.rs  videoroom.rs
src/prisma/: dev.db  dev.db-journal  schema.prisma
src/prisma/migrations/20220530082026_/: migration.sql
src/prisma/migrations/20220812160903_/: migration.sql
