[package]
name = "servercode3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16"
async-std = { version = "1", features = ["attributes", "tokio1"] }
jsonwebtoken = "8.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
prisma-client = { git = "https://github.com/polytope-labs/prisma-client-rs", rev = "ea67e9ba2e188ea3e14f5789a6128fedadd17f49" }
# rust_gpiozero = "0.2"
openssl = "0.10.36"
openssl-sys = { version = "0.9.66", features = ["vendored"] }
rust-argon2 = "1.0"
derive_more = "0.99.17"
mailgun-rs = "0.1.3"
