[package]
name = "servercode3"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prisma-codegen = { git = "https://github.com/polytope-labs/prisma-client-rs", rev = "8c855b5a1c827eeb587ca097e87452ff3f639c60" }

[dependencies]
tide = "0.16"
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
tokio = { version = "1", features = ["full", "io-util"] }
jsonwebtoken = { version = "8.0.1", features = ["use_pem"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
futures = "0.3.24"
prisma-client = { git = "https://github.com/polytope-labs/prisma-client-rs", rev = "8c855b5a1c827eeb587ca097e87452ff3f639c60" }
rust_gpiozero = "0.2"
openssl = "0.10.36"
openssl-sys = { version = "0.9.66", features = ["vendored"] }
rust-argon2 = "1.0"
derive_more = "0.99.17"
mailgun-rs = "0.1.3"
reqwest = "0.11.11"
a2 = "0.6.2"
argparse = "0.2.2"
tide-websockets = "0.4.0"
async-lock = "2.4.0"
futures-lite = "1.12.0"
event-listener-primitives = "2.0.1"
# mediasoup = { path = "./rust" }
env_logger= "*"


[dependencies.parking_lot]
version = "0.12.1"
features = ["serde"]
[dependencies.uuid]
features = ["serde", "v4"]
version = "1.1.2"


# [workspace]
# members = ["rust", "worker"]

# [dependencies.mediasoup-sys]
# path = "./worker"
# version = "0.4.2"

